--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Build executable
       run: |
-        pyinstaller --onefile src/main.py --name paginasamarillas
+        pyinstaller --onefile --add-data "config.json;." main.py --name paginasamarillas
         dir dist
 
     - name: Upload executable
