--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -1,4 +1,4 @@
-name: Build Windows Executable
+name: Build macOS Executable
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: macos-latest
 
     steps:
     - name: Checkout code
@@ -17,7 +17,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.12.3'
+        python-version: '3.12'
 
     - name: Install dependencies
       run: |
@@ -26,11 +26,11 @@ jobs:
 
     - name: Build executable
       run: |
-        pyinstaller --onefile --add-data "config.json;." main.py --name paginasamarillas
-        dir dist
+        pyinstaller --onefile --add-data "config.json:." main.py --name paginasamarillas
+        ls dist
 
     - name: Upload executable
       uses: actions/upload-artifact@v2
       with:
-        name: executable-win
+        name: executable-macos
         path: dist/
